<resources>
    <string name="app_name">Nutrichef Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="text">Dabbawala Shop</string>
    <string name="ok">Ok</string>
    <string name="enter_mobile_number">Please Enter Mobile Number.</string>
    <string name="enter_opt_number">Enter OTP number</string>
    <string name="enter_opt_number_validate">Entered OTP number is not correct.</string>
    <string name="profile">Profile</string>
    <string name="menu_shop">Shop</string>
    <string name="my_profile">My Profile</string>
    <string name="shop">Shop</string>
    <string name="favorate_shop">Favorite Shop</string>
    <string name="my_order">My Order</string>
    <string name="my_cart">My Cart</string>
    <string name="track_my_order">Track my recent order</string>
    <string name="address">Address</string>
    <string name="my_address">My Address</string>
    <string name="update_address">Update Address</string>
    <string name="app_rate">App Rate</string>
    <string name="share_app">Share App</string>
    <string name="contact_us">Contact us</string>
    <string name="menu_settings">Settings</string>
    <string name="shop_detail">Shop Detail</string>
    <string name="other">Other</string>
    <string name="deassociated_product">Are you sure to De-Associate this product.</string>
    <string name="deassociated_delivery_person">Are you sure to De-Associate this Delivery Person.</string>
    <string name="remove_shop_closing_record">Are you sure to Remove this record.</string>
    <string name="order_confirmation">Do you want to confirm the order.</string>
    <string name="deassociated_location">Are you sure to De-Associate this location.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_network">Please check your internet connection.</string>
    <string name="upload_product_image">Do you want to upload product image.</string>
    <string name="logout">Logout</string>
    <string name="please_select">Please select...</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="enter_name">Please enter your Name.</string>
    <string name="enter_email">Please enter your Email</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="enter_flat_number">Please enter Flat number</string>
    <string name="enter_area">Please enter Area</string>
    <string name="enter_locality">Please enter Locality.</string>
    <string name="enter_city">Please enter City.</string>
    <string name="enter_state">Please enter State.</string>
    <string name="enter_pincode">Please enter Pincode.</string>
    <string name="enter_term_condition">Please accept Term and Condition.</string>
    <string name="enter_password">Enter Password.</string>
    <string name="from_date_greater">From Date cannot be greater than To Date.</string>
    <string name="enter_mobileNumber">Enter Mobile Number.</string>
    <string name="enter_emailId">Enter Email Id.</string>
    <string name="enter_idNumber">Enter ID Number.</string>
    <string name="enter_userId">Enter User ID.</string>
    <string name="blank_deliveryStatus">Delivery Status is blank.</string>
    <string name="blank_orderStatus">Order Status is blank.</string>
    <string name="blank_invoiceAmount">Invoice Amount is blank.</string>
    <string name="notEqual_quotedInvoice">Quoted and Invoice Amount is not equal.</string>
    <string name="NA_deliveryStatus">Delivery Status cannot be NA.</string>
    <string name="NA_orderStatus">Order Status cannot be NA.</string>
    <string name="enter_newPassword">Enter New Password.</string>
    <string name="enter_oldPassword">Enter Old Password.</string>
    <string name="enter_confNewPassword">Enter Confirm New Password.</string>
    <string name="enter_confNewPassword_not_match">New Password and Confirm New Password Does Not Match.</string>
    <string name="enter_shop_id">Enter shop Id.</string>
    <string name="no_order_found">No Order Found.</string>
    <string name="no_record_found">No Record Found.</string>
    <string name="upload_image_confirmation">Do you want to upload image.</string>
    <string name="calling_functionality_not_found">Calling functionality is not found.</string>
    <string name="support_number_null">Support number is Null.</string>
    <string name="header_my_orders">My Orders</string>
    <string name="header_my_deliveries">Deliveries</string>
    <string name="header_add_a_delivery_location">Add A Delivery Location</string>
    <string name="header_add_a_shop">Add A Shop Profile</string>
    <string name="header_add_a_delivery_person">Add A Delivery Person</string>
    <string name="header_add_product">Add Product</string>
    <string name="header_all_delivery_persons">All Delivery Persons</string>
    <string name="header_associate_a_delivery_location">Associate A Delivery Location</string>
    <string name="header_associate_a_delivery_person">Associate A Delivery Person</string>
    <string name="header_associate_a_product">Associate A Product</string>
    <string name="header_associate_a_product_category">Associate A Product Category</string>
    <string name="header_associated_delivery_locations">Associated Delivery Locations</string>
    <string name="header_associated_delivery_person">Associated Delivery Person</string>
    <string name="header_associated_products">Associated Products</string>
    <string name="header_associated_products_categories">Associated Product Categories</string>
    <string name="header_associated_shops">Associated Shops</string>
    <string name="header_change_password">Change Password</string>
    <string name="header_contact_us">Contact us</string>
    <string name="header_delivery_person_profile">Delivery Person Profile</string>
    <string name="header_App_Settings">App Settings</string>
    <string name="header_forget_password">Forget Password</string>
    <string name="header_user_login">User Login</string>
    <string name="header_seller_hub_profile">Seller Hub Profile</string>
    <string name="header_seller_keeper_profile">Shop Keeper Profile</string>
    <string name="header_shop_operational_time">Shop Closing Time</string>
    <string name="header_update_delivery_detail">Update Delivery Detail</string>
    <string name="header_update_order_detail">Update Order Detail</string>
    <string name="header_upload_product_image">Upload Product Image</string>
    <string name="header_view_shop_operational_time">Shop Closing Time</string>
    <string name="header_view_shop_profile">View Shop Profile</string>
    <string name="title_activity_associated_delivery_locations">Delivery Locations</string>
    <string name="title_activity_associate_a_product">Associate A Product</string>
    <string name="title_activity_update_associated__product">Update Associated Product</string>
    <string name="title_activity_add_delivery_location">Add Delivery Location</string>
    <string name="title_activity_update_delivery_details">Update Delivery Details</string>
    <string name="title_activity_upload_product_image">Upload Product Image</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_delivery_person">Delivery Person</string>
    <string name="title_activity_associated_shops">Associated Shops</string>
    <string name="title_activity_view_shop_profile">View Shop Profile</string>
    <string name="title_activity_update_seller_hub_profile">Update SellerHub Profile</string>
    <string name="title_activity_add_adelivery_location">Add A Delivery Location</string>
    <string name="title_activity_add_ashop">AddAShopActivity</string>
    <string name="title_activity_associate_adelivery_person">AssociateADeliveryPersonActivity
    </string>
    <string name="title_activity_view_shop_operational_time">ViewShopOperationalTimeActivity
    </string>
    <string name="title_activity_all_delivery_persons">AllDeliveryPersonsActivity</string>
    <string name="title_activity_forget_password">Forget Password Activity</string>
    <string name="forget_Password"><u>Forget Password</u></string>
    <string name="title_activity_view_delivery_person">ViewDeliveryPersonActivity</string>
    <string name="title_activity_todays_deliveries">TodaysDeliveriesActivity</string>
    <string name="title_activity_associate_aproduct_category">AssociateAProductCategoryActivity</string>
    <string name="title_activity_associated_product_categories">AssociatedProductCategoriesActivity</string>
    <string name="label_Flat_Building_Street">Flat/Building/Street</string>
    <string name="hint_Flat_Building_Street">Enter Flat/Building/Street</string>
    <string name="label_Address_Identifier">Address Identifier</string>
    <string name="hint_Address_Identifier">Enter Address Identifier</string>
    <string name="label_Locality">Locality</string>
    <string name="hint_Locality">Locality</string>
    <string name="label_City">City</string>
    <string name="hint_City">City</string>
    <string name="label_State">State</string>
    <string name="hint_State">State</string>
    <string name="label_Pincode">Pincode</string>
    <string name="hint_Pincode">Pincode</string>
    <string name="label_Add_Address">Add Address</string>
    <string name="label_Select_City">Select City</string>
    <string name="label_Enter_Delivery_Location">Enter Delivery Location</string>
    <string name="hint_Enter_Delivery_Location">Enter Delivery Location</string>
    <string name="label_Add_Delivery_Location">Add Delivery Location</string>
    <string name="label_Shop_Name">Shop Name</string>
    <string name="label_Shop_Description">Shop Description</string>
    <string name="label_Shop_Owner_Name">Shop Owner Name</string>
    <string name="label_Shop_Address">Shop Address</string>
    <string name="label_Area_Sector">Area Sector</string>
    <string name="label_Land_Mark">Land Mark</string>
    <string name="label_Owner_Contact_Number">Owner Contact Number</string>
    <string name="label_Support_Contact_Number">Support Contact Number</string>
    <string name="label_Order_Processing_Contact_Number">Order Processing Contact Number</string>
    <string name="label_Email_Id">Email Id</string>
    <string name="label_Minimum_Accepted_Order">Minimum Accepted Order</string>
    <string name="label_Delivery_Charges">Delivery Charges</string>
    <string name="hint_Shop_Name">Shop Name</string>
    <string name="hint_Shop_Description">Shop Description</string>
    <string name="hint_Shop_Owner_Name">Shop Owner Name</string>
    <string name="hint_Shop_Address">Shop Address</string>
    <string name="hint_Area_Sector">Area Sector</string>
    <string name="hint_Land_Mark">Land Mark</string>
    <string name="hint_Owner_Contact_Number">Owner Contact Number</string>
    <string name="hint_Support_Contact_Number">Support Contact Number</string>
    <string name="hint_Order_Processing_Contact_Number">Order Processing Contact Number</string>
    <string name="hint_Email_Id">Email Id</string>
    <string name="hint_Minimum_Accepted_Order">Minimum Accepted Order</string>
    <string name="hint_Delivery_Charges">Delivery Charges</string>
    <string name="label_Owner_Id_Type">Owner Id Type</string>
    <string name="label_Shop_ID">Shop ID</string>
    <string name="label_Registration_Status">Registration Status</string>
    <string name="label_User_ID">User ID</string>
    <string name="label_Select_User_Type">Select User Type</string>
    <string name="hint_User_ID">User ID</string>
    <string name="label_Password">Password</string>
    <string name="hint_Password">Password</string>
    <string name="label_Login">Login</string>
    <string name="label_Update_Profile">Update Profile</string>
</resources>