<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_root_layout"
        layout="@layout/toolbar_sub_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_root_layout"
        android:layout_above="@+id/tv_add_address">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/label_Flat_Building_Street"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/et_address_flat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_Flat_Building_Street"
                android:padding="@dimen/dp_10"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/label_Address_Identifier"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/et_address_identifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_Address_Identifier"
                android:padding="@dimen/dp_10"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/label_Locality"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/et_address_locality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_Locality"
                android:padding="@dimen/dp_10"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/label_City"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/et_address_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_City"
                android:padding="@dimen/dp_10"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/label_State"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/et_address_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_State"
                android:padding="@dimen/dp_10"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/label_Pincode"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/et_address_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_Pincode"
                android:padding="@dimen/dp_10"
                android:textSize="@dimen/sp_13" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_base"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        android:text="@string/label_Add_Address"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_19" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminate="false"
        android:visibility="gone" />

</RelativeLayout>
