<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_root_layout"
        layout="@layout/toolbar_home_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_login_login"
        android:layout_below="@+id/toolbar_root_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="vertical"
            android:padding="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_weight="0.8"
                android:text="@string/label_Select_User_Type"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_13" />

            <Spinner
                android:id="@+id/spinner_userType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/label_User_ID"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/et_login_shopid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_User_ID"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_13" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/label_Password"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_Password"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tv_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5"
                android:text="@string/forget_Password"
                android:layout_below="@+id/et_login_password"
                android:textColor="@color/color_base"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>


    </ScrollView>


    <TextView
        android:id="@+id/tv_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/color_base"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        android:text="@string/label_Login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_19" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminate="false"
        android:visibility="gone" />
</RelativeLayout>