<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_root_layout"
        layout="@layout/toolbar_sub_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scrollview_shop_keeper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_update_profile"
        android:layout_below="@+id/toolbar_root_layout">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="0.7"
                    android:text="@string/label_Shop_ID"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:id="@+id/tv_profile_shop_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="0.7"
                    android:text="@string/label_Shop_Name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:id="@+id/et_profile_shop_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="0.7"
                    android:text="@string/label_Registration_Status"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:id="@+id/tv_profile_registartion_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="0.7"
                    android:text="@string/label_Shop_Owner_Name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:id="@+id/tv_profile_owner_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="0.7"
                    android:text="@string/label_Shop_Address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <EditText
                    android:id="@+id/et_profile_shop_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:background="@drawable/edittext_background"
                    android:gravity="top|left"
                    android:hint="@string/hint_Shop_Address"
                    android:lines="2"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingLeft="@dimen/dp_5"
                    android:paddingTop="@dimen/dp_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="0.7"
                    android:text="@string/label_Area_Sector"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <EditText
                    android:id="@+id/et_profile_area_sector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:background="@drawable/edittext_background"
                    android:gravity="top|left"
                    android:hint="@string/hint_Area_Sector"
                    android:padding="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:editable="false"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="0.7"
                    android:text="@string/label_City"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:id="@+id/tv_profile_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="0.7"
                    android:text="@string/label_Pincode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <EditText
                    android:id="@+id/et_profile_pincode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:background="@color/white"
                    android:enabled="false"
                    android:hint="@string/hint_Pincode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="0.7"
                    android:text="@string/label_State"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:id="@+id/tv_profile_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/hint_State"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="0.7"
                    android:text="@string/label_Land_Mark"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <EditText
                    android:id="@+id/et_profile_land_mark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/hint_Land_Mark"
                    android:padding="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <include layout="@layout/activity_shop_keeper_profile_next"></include>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_base"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/label_Update_Profile"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminate="false"
        android:visibility="gone" />

</RelativeLayout>
